feat: improve raise hand API storing hand order (#94) (#137)
* feat: improve raise hand API to let moderators remove raising hands
* chore: refactor ParticipantServiceImpl to validate meeting participant in every API

ref: WSC-1895